--- a/public/css/cardlist.css
+++ b/public/css/cardlist.css
@@ -34,20 +34,19 @@ body {
 }
 
 .app-wrapper {
-    padding: 20px 30px;
+    padding: 1rem 6%;
     width: 100%;
-    min-height: calc(100vh - 70px); 
+    min-height: 80vh; 
 }
 
 .topbar {
+    padding: 1rem 6%;
+    background: white;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.05);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #ffffff;
-    padding: 16px 24px;
-    border-radius: 16px;
-    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05);
-    margin-bottom: 30px;
+    flex-wrap: wrap;
 }
 
 .topbar-left {
