--- a/public/css/resetpass.css
+++ b/public/css/resetpass.css
@@ -57,6 +57,22 @@ body {
     margin-bottom: 20px;
 }
 
+
+.btn-back-inline {
+    display: inline-block;
+    color: #6366f1; 
+    text-decoration: none;
+    font-size: 14px;
+    padding-bottom: 20px;
+    font-weight: 500;
+    transition: all 0.2s ease;
+}
+
+.btn-back-inline:hover {
+    font-weight: 700;
+    text-decoration: underline;
+}
+
 label {
     display: block;
     font-size: 14px;
